se agrego el grafico de dicaprio

--- a/d3_js/d3_js.html
+++ b/d3_js/d3_js.html
@@ -15,6 +15,8 @@
     <script src='https://d3js.org/d3.v7.min.js'></script>
     <script src='https://unpkg.com/d3-simple-slider'></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_2.css">
+
 </head>
 <body>
 
@@ -44,9 +46,17 @@
             <div id="chart_p1"></div>
             <div id="slider-time"></div>
             <p id="value-time"></p>
+
+            <p>Tecnologías utilizadas: JavaScript HTML CSS</p>
             
             <h4>Gráficas de Edades: Leonardo DiCaprio y sus Ex Parejas</h4>
             <p>Este es un ejercicio que muestra las edades de Leonardo DiCaprio en una gráfica de línea y las edades de sus ex parejas en una gráfica de barras, utilizando la misma escala para comparar ambas edades.</p>
+
+            <div id="chart_p2"></div>
+            <div id="name"></div>
+            <div id="age"></div>
+
+            <p>Tecnologías utilizadas: JavaScript HTML CSS</p>
             
             <h4>Gráfica de Línea con D3.js</h4>
             <p>Este es un pequeño proyecto que muestra cómo crear una gráfica de línea utilizando D3.js para visualizar los datos de cierre del mercado del índice IBEX desde un archivo CSV.</p>
@@ -58,6 +68,8 @@
 
     </div>
     <script src="main.js"></script>
+    <script src="main_2.js"></script>
+
 
 </body>
 </html>
