--- a/d3_js/index.html
+++ b/d3_js/index.html
@@ -9,10 +9,15 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="chart"></div>
+    <div id="chart_p1"></div>
     <div id="slider-time"></div>
     <p id="value-time"></p>
     <script src="main.js"></script>
+
+    <div id="chart_p2"></div>
+    <div id="name"></div>
+    <div id="age"></div>
+    <script src="main_2.js"></script>
 </body>
 </html>
 
