se finalizo el proyecto de d3.js

--- a/d3_js/index.html
+++ b/d3_js/index.html
@@ -18,6 +18,10 @@
     <div id="name"></div>
     <div id="age"></div>
     <script src="main_2.js"></script>
+
+    <div id="chart_p3"></div>
+    <script src="main_3.js"></script>
+
 </body>
 </html>
 
