--- a/d3_js/d3_js.html
+++ b/d3_js/d3_js.html
@@ -3,20 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>D3.js</title>
-    <style>
-        body {
-        font-family: Arial, sans-serif;
-        }
-        .container {
-        max-width: 800px;
-        margin: auto;
-        }
-    </style>
+
     <script src='https://d3js.org/d3.v7.min.js'></script>
     <script src='https://unpkg.com/d3-simple-slider'></script>
+    <link rel="stylesheet" href="style_d3.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style_2.css">
-
+    <link rel="stylesheet" href="style_3.css">
 </head>
 <body>
 
@@ -29,15 +22,6 @@
         <p>Esta sección destaca algunos de los proyectos de base de datos que he realizado utilizando MySQL.</p>
     
         <!-- Proyecto 1 -->
-        <div class="project">
-            <h3>Gráfica en Tiempo Real del Precio de Bitcoin (BTC)</h3>
-                <p>Utilizando tecnologías modernas como D3.js, JavaScript, HTML y CSS, este proyecto presenta una gráfica de velas interactiva que muestra los datos históricos más recientes de BTC. La actualización en tiempo real y la presentación cuidadosa de los datos facilitan la interpretación de las tendencias y patrones del mercado.</p>
-
-                <p>Tecnologías utilizadas: JavaScript HTML CSS</p>
-
-        </div>
-    
-        <!-- Proyecto 2 -->
         <div class="project">
             <h3>Proyecto Fin de Curso D3.js KeepCoding</h3>
             <h4>Slider para Visualizar Ganadores de la Copa Mundial</h4>
@@ -61,6 +45,8 @@
             <h4>Gráfica de Línea con D3.js</h4>
             <p>Este es un pequeño proyecto que muestra cómo crear una gráfica de línea utilizando D3.js para visualizar los datos de cierre del mercado del índice IBEX desde un archivo CSV.</p>
 
+            <div id="chart_p3"></div>
+
             <p>Tecnologías utilizadas: JavaScript HTML CSS</p>
         </div>
 
@@ -69,7 +55,7 @@
     </div>
     <script src="main.js"></script>
     <script src="main_2.js"></script>
-
+    <script src="main_3.js"></script>
 
 </body>
 </html>
