se agregaro formato a mysql

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         <h3>MySQL</h3>
                         <img src="./img/MySQL_img.png" alt="Imagen del Proyecto 1">
                         <p>My MySQL projects encompass designing and optimizing databases, as well as crafting intricate queries to extract meaningful insights. I've specialized in creating efficient data structures and leveraging my SQL querying skills to access, analyze, and manage data effectively. My contributions result in robust and scalable solutions</p>
-                        <a href="./mysql.html" target="_blank">Go to MySQL</a>
+                        <a href="./mysql/mysql.html" target="_blank">Go to MySQL</a>
                     </div>
 
                     <div class="project-card">
