se midifico titulo

--- a/d3_js/d3_js.html
+++ b/d3_js/d3_js.html
@@ -23,7 +23,7 @@
         
         <!-- Project 1 -->
         <div class="project">
-            <h3>End-of-Course Project D3.js KeepCoding</h3>
+            <h3>End-of-Course Project D3.js</h3>
             <h4>Slider to Visualize World Cup Winners</h4>
             <p>This exercise consists of a web application that displays a bar chart representing the winners of the Soccer World Cup over the years. Additionally, an interactive slider is used to change the year and update the bars of the chart according to the winning teams for that year.</p>
             
