se agrego proyecto de bigquery

--- a/mysql/mysql.html
+++ b/mysql/mysql.html
@@ -26,19 +26,21 @@
             <h3>Gestión de Flota de Vehículos</h3>
                 <p>Este proyecto se centra en la gestión eficiente de la flota de vehículos.
                     Mediante la implementación de un sistema de base de datos en PostgreSQL, se busca tener un control completo sobre diversos aspectos de la flota, como modelos de vehículos, marcas, grupos empresariales y más. Además, se abarcan detalles como el color del coche, matrícula, kilómetros recorridos y datos de la aseguradora. Un aspecto clave es el seguimiento de las revisiones de cada vehículo, incluyendo la fecha, kilómetros al momento y costos. El proyecto incluye un script SQL autónomo para crear y poblar la base de datos, así como archivos CSV de ejemplo para pruebas.</p>
-                <p>Tecnologías utilizadas: DBeaver</p>
+                <p>Tecnologías utilizadas: DBeaver PostgreSQL, SQL,</p>
                 <a href="https://github.com/ferkuellar/Modelado-SQL">Ver Código</a>
             <img src="../img/pantalla_final.png" alt="Descripción de la imagen" width="400">
         </div>
     
         <!-- Proyecto 2 -->
         <div class="project">
-            <h3>Nombre del Proyecto 2</h3>
-            <p>Descripción corta del proyecto.</p>
-            <p>Tecnologías utilizadas: PostgreSQL, Python</p>
-            <a href="link-al-codigo">Ver Código</a>
+            <h3>Análisis de Datos de IVR para Call Center</h3>
+                <p>Este repositorio contiene scripts de SQL y conjuntos de datos para analizar sistemas de         Respuesta de Voz Interactiva (IVR) en un entorno de call center. El objetivo es entender las interacciones de los clientes y optimizar el flujo de IVR.</p>
+                <p>Tecnologías utilizadas: PostgreSQL, Bigquery, SQL, Google Cloud.</p>
+                <a href="https://github.com/ferkuellar/practica_advanced_sql">Ver Código</a>
+            <img src="../img/bigquery_img.png" alt="Descripción de la imagen" width="400">
             <!-- Incluir imágenes o capturas de pantalla aquí -->
         </div>
+
         <!-- Proyecto 3 -->
         <div class="project">
             <h3>Nombre del Proyecto 3</h3>
