--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Data Analyst - Fernando Cuellar</title>
+    <title>Data Engineer - Fernando Cuellar</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.4.2/css/all.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
@@ -20,9 +20,9 @@
                 <div class="about-me-content">
                     <div class="about-me-text">
                         <h1>About Me</h1>
-                        <p>As Data Analyst with a Passion for Data, Algorithms, and Problem Solving.</p>
+                        <p>As a Data Engineer with a Passion for Data, Algorithms, and Problem Solving.</p>
                         <p>My technical prowess, coupled with a strong academic foundation in engineering, statistics, and machine learning, equips me to tackle complex challenges head-on.</p>
-                        <p>I possess extensive experience in the field of Data Analisys, encompassing a deep understanding of both supervised and unsupervised algorithms. My expertise extends to proficiently employing data visualization techniques to effectively communicate the outcomes of my analyses. To drive my data projects forward, I skillfully harness a diverse set of tools including SQL, D3.js, Python, Excel, and Tableau.</p>
+                        <p>I possess extensive experience in the field of Data Engineer, encompassing a deep understanding of both supervised and unsupervised algorithms. My expertise extends to proficiently employing data visualization techniques to effectively communicate the outcomes of my analyses. To drive my data projects forward, I skillfully harness a diverse set of tools including SQL, D3.js, Python, DeepLearning, and Machine Learning.</p>
                         
                         <div class="download-buttons-social">
                             <div class="download-buttons">
@@ -161,11 +161,14 @@
                         <div class="bar" style="width: 90%;">
                             <span>MySQL</span>
                         </div>
-                        <div class="bar" style="width: 80%;">
-                            <span>Tableau</span>
+                        <div class="bar" style="width:65%;">
+                            <span>PyTorch</span>
                         </div>
-                        <div class="bar" style="width: 98%;">
-                            <span>Excel</span>
+                        <div class="bar" style="width: 70%;">
+                            <span>TensorFlow</span>
+                        </div>
+                        <div class="bar" style="width: 66%;">
+                            <span>Keras</span>
                         </div>
                     </div>
                 </div>
